# TSP

./: .gitignore  CMakeLists.txt  Einstiegsaufgabe.cpp  Einstiegsaufgabe.h  Graph.cpp  Graph.h  TSP_enumeration.cpp  TSP_enumeration.h  TSP_reader.cpp  TSP_reader.h  TSP_writer.cpp  TSP_writer.h  bitte_lesen.txt  cmp.txt  main.cpp  parameter_bitte_lesen.txt
